--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.7",
+    "mocha": "^10.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
