--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx mocha test/**/*.spec.ts -r ts-node/register"
   },
   "repository": {
     "type": "git",
@@ -17,10 +17,15 @@
   },
   "homepage": "https://github.com/DevSanso/MileageSerivce#readme",
   "devDependencies": {
+    "@types/chai": "^4.3.1",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.7",
+    "@types/mocha": "^9.1.1",
+    "chai": "^4.3.6",
     "mocha": "^10.0.0",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4",
+    "uuidv4": "^6.2.13"
   },
   "dependencies": {
     "@types/koa-router": "^7.4.4",
