gitignore 폴더 추가,exclude에 test 안의 소스파일, node_modules 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,6 +101,8 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "./test/**/*.ts",
+    "node_modules"
   ]
 }
