--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,6 +103,7 @@
   "exclude": [
     "**/*.spec.ts",
     "./test/**/*.ts",
-    "node_modules"
+    "node_modules",
+    "./scripts/**/*"
   ]
 }
