mocha --exit 플래그 추가 : 없을시 테스트 완료후 종료가 안되기 때문

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha test/list.spec.ts -r ts-node/register",
+    "test": "npx mocha test/list.spec.ts -r ts-node/register --exit",
     "test-server" : "npx ts-node ./scripts/ts/test_run_server.ts"
   },
   "repository": {
